--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://zayneed.cloud">
-    <title>Weiterleitung</title>
+    <title>benestinkt</title>
 </head>
 <body>
     <p>Du wirst sofort weitergeleitet. Falls nicht, <a href="https://zayneed.cloud">klicke hier</a>.</p>
