--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://zayneed.cloud">
+    <meta http-equiv="refresh" content="0; url=https://old.zayneed.cloud/aaron.html">
     <title>benestinkt</title>
 </head>
 <body>
-    <p>Du wirst sofort weitergeleitet. Falls nicht, <a href="https://zayneed.cloud">klicke hier</a>.</p>
+    <p>benedikt stinkt. Falls nicht, <a href="https://zayneed.cloud">bist du ein hs</a>.</p>
 </body>
 </html>
